--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,3 +3,14 @@
 body {
   font-family: "Sora", sans-serif;
 }
+.item-button button{
+  margin-top: 20px;
+  width: 200px;
+  background-color: rgb(34 , 78 , 9);
+  color: white;
+}
+
+/* .item-button .ant-btn-default:hover{
+  color: white;
+  border-color: white;
+} */
