--- a/client/src/styles/DefaultLayout.css
+++ b/client/src/styles/DefaultLayout.css
@@ -45,3 +45,20 @@
   align-items: center;
   margin-left: 10px;
 }
+
+.ant-layout-header {
+  line-height: 0px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.cart-item {
+  padding-left: 20px;
+  padding-right: 30px;
+  cursor: pointer;
+}
+.cart-item p {
+  margin-top: 10px;
+  font-weight: bold;
+}
